compiler/fir/resolve/testData/resolve/constant/basicBuiltins/intMethods.kt
//unary methods
//const val inv = 1.inv()
//
//const val byteVal = 2.toByte()
//const val charVal = 0x31.toChar()
//const val doubleVal = 4.toDouble()
//const val floatVal = 5.toFloat()
//const val intVal = 6.toInt()
//const val longVal = 7.toLong()
//const val shortVal = 8.toShort()
//const val stringVal = 9.toString()
//const val unaryMinusPrefix = -10
//const val unaryMinusCall = 10.unaryMinus()
//const val unaryPlusPrefix = +10
//const val unaryPlusCall = 10.unaryPlus()
//
////binary methods
//const val andCall = 1 and 2
//const val compareToByte = 8.compareTo(byteVal)
//const val compareToDouble = 7.compareTo(doubleVal)
//const val compareToFloat = 6.compareTo(floatVal)
//const val compareToInt = 5.compareTo(2)
//const val compareToLong = 3.compareTo(longVal)
//const val compareToShort = 2.compareTo(shortVal)
//const val div = 20 / 5
//const val minus = 5 - 1
//const val equals = div == minus
//const val equalsCall = div.equals(minus)
const val equals = 1 == 2
const val equalsCall = 1.equals(2)
//const val plus = 1 + 2
//const val plusComplex = 1 + (2 + 3) + 4

//error
//val nonConst = 10
//const val errorConst = 1 + nonConst
//const val increment = 1++
//const val decrement = 1--
//const val range = 1.rangeTo(10)
//const val hash = 1.hashCode()